--- a/drawfine/package.json
+++ b/drawfine/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.1",
+    "jointjs": "^3.7.7",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
